...
      <Stack screenOptions={{ headerShown: false }}>
        <Stack.Screen name="(tabs)" />
        <Stack.Screen
          name="listings/[id]"
          options={{
            headerShown: true,
            title: 'Listing Details',
            presentation: 'card',
          }}
        />
        <Stack.Screen
          name="listings/create"
          options={{
...
